--- a/Projects/WeatherApp/style/style.css
+++ b/Projects/WeatherApp/style/style.css
@@ -1,29 +1,28 @@
 * {
     font-family: 'poppins', sans-serif !important;
 }
+:root{
+    --background: #d7d7d7;
+   
+}
 body{
-    background-color: #d7d7d7;
+    background-color: var(--background);
+   
 }
 form input[type="text"]{
     border: none;
 }
-.temperature-header {
+.temperature-text {
     font-size: 6rem !important;
 }
 
-.weather-data-container ,.detail,#input-weather{
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 6px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    /* From https://css.glass */
+.weather-data-container ,.detail{
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+   
 }
 
