--- a/Projects/WeatherApp/style/style.css
+++ b/Projects/WeatherApp/style/style.css
@@ -2,7 +2,7 @@
     font-family: 'poppins', sans-serif !important;
 }
 :root{
-    --background: #d7d7d7;
+    --background: #CBE8E8;
    
 }
 body{
