--- a/Projects/Random-Quotes/styles/style.css
+++ b/Projects/Random-Quotes/styles/style.css
@@ -67,7 +67,7 @@ body {
     text-align: right;
 
 }
-#generateBtn,#clipboardBtn{
+#generateBtn,#clipboardBtn,#textSpeechBtn{
     cursor: pointer;
     outline: none;
     border: none;
@@ -81,7 +81,7 @@ body {
     background-color: var(--accent);
   
 }
-#clipboardBtn{
+#clipboardBtn,#textSpeechBtn{
     font-size: 14px;
     background: none;
     border: 1px solid var(--accent);
@@ -91,7 +91,7 @@ body {
 #generateBtn:hover{
     opacity: 0.7;
 }
-#clipboardBtn:hover{
+#clipboardBtn:hover,#textSpeechBtn:hover{
     color: var(--background2);
     background-color: var(--accent);
 }
